@@ -59,6 +59,7 @@ export(split_labels)
 export(strip_splits)
 export(summarise)
 export(summarize)
+export(take)
 export(true)
 export(try_default)
 export(tryapply)
